# lob_view

./: .gitignore  Makefile  README.md  go.mod
LobView/: Cargo.toml  index.html
LobView/src/: api.rs  main.rs
LobView/src/examples/: mod.rs  order_book_monitor.rs  orderbook_stream_example.rs
binance/: orderbook.go  snapshot.go  subscribe.go  websocket.go
cmd/lob_view/: main.go
examples/basic_usage/: main.go
pkg/exchanges/: display.go
pkg/exchanges/binance/: binance.go
pkg/orderbook/: orderbook.go
